fixed z-index issue with splash page and hamburger menu

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -452,13 +452,11 @@ a + svg:focus {
     h1 {
         position: relative;
         top: 15%;
-        z-index: 1;
     }
     h4 {
         letter-spacing: 0.6em;
         position: relative;
         bottom: -20%;
-        z-index: 1;
     }
     .splash_mask_left {
         fill: $white;
